; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_evlist.c_perf_evlist__new.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_evlist.c_perf_evlist__new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_evlist = type { i32 }
%struct.cpu_map = type { i32 }
%struct.thread_map = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.perf_evlist* @perf_evlist__new(%struct.cpu_map* %0, %struct.thread_map* %1) #0 {
  %3 = alloca %struct.cpu_map*, align 8
  %4 = alloca %struct.thread_map*, align 8
  %5 = alloca %struct.perf_evlist*, align 8
  store %struct.cpu_map* %0, %struct.cpu_map** %3, align 8
  store %struct.thread_map* %1, %struct.thread_map** %4, align 8
  %6 = call %struct.perf_evlist* @zalloc(i32 4)
  store %struct.perf_evlist* %6, %struct.perf_evlist** %5, align 8
  %7 = load %struct.perf_evlist*, %struct.perf_evlist** %5, align 8
  %8 = icmp ne %struct.perf_evlist* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load %struct.perf_evlist*, %struct.perf_evlist** %5, align 8
  %11 = load %struct.cpu_map*, %struct.cpu_map** %3, align 8
  %12 = load %struct.thread_map*, %struct.thread_map** %4, align 8
  %13 = call i32 @perf_evlist__init(%struct.perf_evlist* %10, %struct.cpu_map* %11, %struct.thread_map* %12)
  br label %14

14:                                               ; preds = %9, %2
  %15 = load %struct.perf_evlist*, %struct.perf_evlist** %5, align 8
  ret %struct.perf_evlist* %15
}

declare dso_local %struct.perf_evlist* @zalloc(i32) #1

declare dso_local i32 @perf_evlist__init(%struct.perf_evlist*, %struct.cpu_map*, %struct.thread_map*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
